<resources>
    <string name="app_name">Color Assistant</string>

    <string name="colors">Colors</string>
    <string name="likes">Likes</string>
    <string name="no_items">No combo colors</string>
    <string name="more">More</string>
    <string name="hide">Hide</string>
    <string name="color_theme">Color Theme</string>
    <string name="night_mode">Night Mode</string>
    <string name="share">Share</string>
    <string name="back_exit">Please click BACK again to exit</string>

    <string name="type">Hex\nRGB\nHSV\nCMYK</string>
    <string name="hex">Hex</string>
    <string name="rgb">RGB</string>
    <string name="hsv">HSV</string>
    <string name="cmyk">CMYK</string>

    <string name="bar_global">Global</string>
    <string name="bar_combo">Combo</string>
    <string name="bar_cloud">Cloud</string>
    <string name="bar_constructor">Constructor</string>
    <string name="bar_settings">Settings</string>
    <string name="bar_qr_scan">QR Scan</string>
    <string name="bar_image_scan">Image scan</string>
    <string name="bar_settings_theme">Theme</string>

    <string name="bottom_sheet_combo_list_saturation">Saturation</string>
    <string name="bottom_sheet_combo_list_lightness">Lightness</string>

    <string name="bottom_sheet_hsl_saturation">Saturation</string>
    <string name="bottom_sheet_hsl_lightness">Lightness</string>

    <string name="bottom_sheet_info_color_title">Information</string>

    <string name="dialog_scan_title_qr">QR</string>
    <string name="dialog_scan_title_link">Link</string>
    <string name="dialog_scan_positive">Add</string>
    <string name="dialog_scan_neutral">Cancel</string>

    <string name="dialog_save_title">Save</string>
    <string name="dialog_save_message">Are you sure you want to save?</string>
    <string name="dialog_save_positive">OK</string>
    <string name="dialog_save_neutral">Cancel</string>

    <string name="dialog_share_title">Share</string>
    <string name="dialog_share_positive">Share</string>
    <string name="dialog_share_neutral">Cancel</string>

    <string name="dialog_color_delete_title">Delete color</string>
    <string name="dialog_color_delete_message">Are you sure you want to delete color?</string>
    <string name="dialog_color_delete_positive">Delete</string>
    <string name="dialog_color_delete_neutral">Cancel</string>

    <string name="snack_qr_scan_error_title">Error QR</string>
    <string name="snack_qr_scan_error_click">Try</string>

    <string name="cloud_menu_constructor">Constructor</string>
    <string name="cloud_menu_save">Save</string>
    <string name="cloud_menu_cloud">Cloud</string>
    <string name="cloud_menu_qr">QR scan</string>
    <string name="cloud_menu_image_scan">Image scan</string>

    <string name="main_settings">Settings</string>
    <string name="main_menu_qr">QR scan</string>
    <string name="main_menu_image_scan">Image scan</string>

    <string name="combo_menu_share">Share</string>
</resources>
