<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/save"
        android:icon="@drawable/save"
        android:title="@string/cloud_menu_save"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/constructor"
        android:icon="@drawable/constructor"
        android:title="@string/cloud_menu_constructor"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/cloud"
        android:icon="@drawable/cloud"
        android:title="@string/cloud_menu_cloud"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/qr"
        android:title="@string/cloud_menu_qr"
        android:visible="true" />

    <item
        android:id="@+id/image_scan"
        android:title="@string/cloud_menu_image_scan"
        android:visible="true" />
</menu>